@@ -74,13 +74,18 @@ Allocate memory aligned to a 16 byte boundry
 	#endif
 #else /* Not WIN32 */
 	#if defined(__sun)
-		#define HAVE_MEMALIGN
-	/* Linux x86_64 and OSX always align allocations to 16 bytes */
-	#elif !defined(__amd64__) && !defined(__APPLE__)
-		/* FIXME: Yes, this is a big assumption */
-		#define HAVE_POSIX_MEMALIGN
+			#define HAVE_MEMALIGN
+		#elif defined(__GNUC__)
+			#define HAVE_MEMALIGN
+			#include <malloc.h>		
+		/* Linux x86_64 and OSX always align allocations to 16 bytes */
+		#elif !defined(__amd64__) && !defined(__APPLE__)	
+			/* FIXME: Yes, this is a big assumption */
+			#define HAVE_POSIX_MEMALIGN
 	#endif
 #endif
+
+
 
 #define opj_aligned_malloc(size) malloc(size)
 #define opj_aligned_free(m) free(m)
